Index html changes: Modified sections to look tighter (removed columns) Modified background to be black
Other changes:
Removed about page
Fixed navigation links in team html page

--- a/index.html
+++ b/index.html
@@ -35,30 +35,21 @@
             </div>
         </section>
 
-        <h2>Who are we?</h2>
         <section class="whoAreWe">
-            <div class="row">
-                <div class="blurb-col">
-                    <p>The Western Engineering Mars Rover team is a student-led club driven towards the goal of building a rover that is capable of accomplishing various tasks in environments similar to ones found on the surface of mars. 
-                        Our team is comprised of various students from multiple disciplines. 
-                        As an organization, we strive to inspire our members and members of the public to become more 
-                        involved in science and technology through robotics</p>
-                </div>
-                <div class="blurb-col">
-                    <img src="images/MarsRover.png">
-                </div>
+            <div class="indexBlurbBox">
+                <h2>Who are we?</h2>
+                <p>The Western Engineering Mars Rover team is a student-led club driven towards the goal of building a rover that is capable of accomplishing various tasks in environments similar to ones found on the surface of mars. 
+                    Our team is comprised of various students from multiple disciplines. 
+                    As an organization, we strive to inspire our members and members of the public to become more 
+                    involved in science and technology through robotics</p>
             </div>
         </section>
 
-        <h2>Our Goal</h2>
+        
         <section class="goal">
-            <div class="row">
-                <div class="blurb-col">
-                    <img src="images/MarsRover.png">
-                </div>
-                <div class="blurb-col">
-                    <p>Our goal as a team is to compete in and win the Canadian International Rover Challenge. </p>
-                </div>
+            <div class="indexBlurbBox">
+                <h2>Our Goal</h2>
+                <p>Our goal as a team is to compete in and win the Canadian International Rover Challenge. </p>
             </div>
         </section>
 
