--- a/team.html
+++ b/team.html
@@ -20,8 +20,10 @@
                     <i class="fa fa-times" onclick="hideMenu()"></i>
                     <ul>
                         <li><a href="index.html">HOME</a></li>
-                        <li><a href="about.html">ABOUT</a></li>
+                        <li><a href="team.html">OUR TEAM</a></li>
+                        <li><a href="">SUBSYSTEMS</a></li>
                         <li><a href="">SPONSORS</a></li>
+                        <li><a href="">CONTACT</a></li>
                     </ul>
                 </div>
                 <i class="fa fa-bars" onclick="showMenu()"></i>
