Added a team photo for index page section

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <section class="whoAreWe">
             <div class="indexBlurbBox">
                 <h2>Who are we?</h2>
+                <div class="header-line"></div>
                 <p>The Western Engineering Mars Rover team is a student-led club driven towards the goal of building a rover that is capable of accomplishing various tasks in environments similar to ones found on the surface of mars. 
                     Our team is comprised of various students from multiple disciplines. 
                     As an organization, we strive to inspire our members and members of the public to become more 
@@ -45,10 +46,14 @@
             </div>
         </section>
 
+        <section class="team-photo">
+            <img src="images/TeamPhotoSub.png">
+        </section>
         
         <section class="goal">
             <div class="indexBlurbBox">
                 <h2>Our Goal</h2>
+                <div class="header-line"></div>
                 <p>Our goal as a team is to compete in and win the Canadian International Rover Challenge. </p>
             </div>
         </section>
