Created a drop down menu (took way too long)

--- a/index.html
+++ b/index.html
@@ -21,7 +21,15 @@
                     <ul>
                         <li><a href="index.html">HOME</a></li>
                         <li><a href="team.html">OUR TEAM</a></li>
-                        <li><a href="">SUBSYSTEMS</a></li>
+                        <div class="dropdown">
+                            <li><a href="">SUBSYSTEMS</a></li>
+                            <div id="dropdown-options">
+                                <a href="">MECHANICAL</a>
+                                <a href="">ELECTRICAL</a>
+                                <a href="">SOFTWARE</a>
+                                <a href="">BUSINESS</a>
+                            </div>
+                        </div>
                         <li><a href="">SPONSORS</a></li>
                         <li><a href="">CONTACT</a></li>
                     </ul>
