Added more elements to footer Modified nav links and footer in teams Noticed new issue in team page regarding nav

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
             <div class="text-box">
                 <h1>Welcome to WeMars</h1>
-                <a href="about.html" class="hero-btn">JOIN US!</a>
+                <a href="" class="hero-btn">JOIN US!</a>
             </div>
         </section>
 
@@ -67,7 +67,19 @@
         </section>
 
         <section class="footer">
+            <h2>WE Mars Team</h2>
+            <h3>1151 Richmond St<br>London, ON N6A 3K7</h3>
+            <a href="" class="hero-btn" id="contact-btn">CONTACT US</a>
+            <div class="icons-container">
+                <div class="icons"><a href=""><i class="fa-brands fa-facebook fa-2xl"></i></a></div>
+                <div class="icons"><a href="https://www.instagram.com/we.mars/"><i class="fa-brands fa-instagram fa-2xl"></i></a></div>
+                <div class="icons"><a href="https://www.linkedin.com/company/western-engineering-mars-rover-team/about/"><i class="fa-brands fa-linkedin fa-2xl"></i></a></div>
+            </div>
             <p>Made by WeMars members</p>
+        </section>
+
+        <section>
+            <p></p>
         </section>
         
         <!--Javascript for Toggle Menu-->
