--- a/team.html
+++ b/team.html
@@ -21,7 +21,15 @@
                     <ul>
                         <li><a href="index.html">HOME</a></li>
                         <li><a href="team.html">OUR TEAM</a></li>
-                        <li><a href="">SUBSYSTEMS</a></li>
+                        <div class="dropdown">
+                            <li><a href="">SUBSYSTEMS</a></li>
+                            <div id="dropdown-options">
+                                <a href="">MECHANICAL</a>
+                                <a href="">ELECTRICAL</a>
+                                <a href="">SOFTWARE</a>
+                                <a href="">BUSINESS</a>
+                            </div>
+                        </div>
                         <li><a href="">SPONSORS</a></li>
                         <li><a href="">CONTACT</a></li>
                     </ul>
@@ -81,7 +89,19 @@
         </section>
 
         <section class="footer">
+            <h2>WE Mars Team</h2>
+            <h3>1151 Richmond St<br>London, ON N6A 3K7</h3>
+            <a href="" class="hero-btn" id="contact-btn">CONTACT US</a>
+            <div class="icons-container">
+                <div class="icons"><a href=""><i class="fa-brands fa-facebook fa-2xl"></i></a></div>
+                <div class="icons"><a href="https://www.instagram.com/we.mars/"><i class="fa-brands fa-instagram fa-2xl"></i></a></div>
+                <div class="icons"><a href="https://www.linkedin.com/company/western-engineering-mars-rover-team/about/"><i class="fa-brands fa-linkedin fa-2xl"></i></a></div>
+            </div>
             <p>Made by WeMars members</p>
+        </section>
+
+        <section>
+            <p></p>
         </section>
         
         <!--Javascript for Toggle Menu-->
