--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 
         <title>WeMars</title>
 
+        <!--Google Fonts link-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@500&family=Poppins&display=swap" rel="stylesheet">
         <!--Links css file to html site-->
         <link rel="stylesheet" href="style.css">
         <!--Links bootstrapcdn-->
@@ -31,7 +35,7 @@
                             </div>
                         </div>
                         <li><a href="">SPONSORS</a></li>
-                        <li><a href="">CONTACT</a></li>
+                        <li><a href="contact.html">CONTACT</a></li>
                     </ul>
                 </div>
                 <i class="fa fa-bars" onclick="showMenu()"></i>
