Fixed nav bar issue Added base subsystems page

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                     <i class="fa fa-times" onclick="hideMenu()"></i>
                     <ul>
                         <li><a href="index.html">HOME</a></li>
-                        <li><a href="team.html">OUR TEAM</a></li>
+                        <li><a href="about.html">OUR TEAM</a></li>
                         <div class="dropdown">
-                            <li><a href="">SUBSYSTEMS</a></li>
+                            <li><a href="subsystems.html">SUBSYSTEMS</a></li>
                             <div id="dropdown-options">
                                 <a href="">MECHANICAL</a>
                                 <a href="">ELECTRICAL</a>
