--- a/software.html
+++ b/software.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
-        <section class="sub-header">
+        <section class="sub-header" id="mechanical-page">
             <nav>
                 <a href="index.html"><img src="images/WeMarsLogo.png"></a>
                 <div class="nav-links" id="navLinks">
@@ -40,53 +40,12 @@
                 </div>
                 <i class="fa fa-bars" onclick="showMenu()"></i>
             </nav>
-
-            <h1>Our Team</h1>
+            <h1>Software</h1>
         </section>
+        <div class="header-line"></div>
 
-        <section class="exec">
-            <div class="row">
-                <div class="exec-col">
-                    <img src="images/Exec/ProjLead.jfif">
-                    <h1>Clara Levy</h1>
-                    <h4>Project Manager</h4>
-                </div>
-                <div class="exec-col">
-                    <img src="images/Exec/ProjLead.jfif">
-                    <h1>Thomas Naish</h1>
-                    <h4>Vice-Project Manager</h4>
-                </div>
-                <div class="exec-col">
-                    <img src="images/Exec/ProjLead.jfif">
-                    <h1>Wyatt</h1>
-                    <h4>Electrical Lead</h4>
-                </div>
-                <div class="exec-col">
-                    <img src="images/Exec/ElecLead2.jfif">
-                    <h1>Sean McBride</h1>
-                    <h4>Electrical Lead</h4>
-                </div>
-            </div>
-        </section>
-
-        <section class="exec">
-            <div class="row">
-                <div class="exec-col">
-                    <img src="images/Exec/SoftLead.jfif">
-                    <h1>Abeer Muhammad</h1>
-                    <h4>Programming Lead</h4>
-                </div>
-                <div class="exec-col">
-                    <img src="images/Exec/SoftLead2.jfif">
-                    <h1>Dev Patel</h1>
-                    <h4>Programming Lead</h4>
-                </div>
-                <div class="exec-col">
-                    <img src="images/Exec/ProjLead.jfif">
-                    <h1>Nathan Eng</h1>
-                    <h4>Business Lead</h4>
-                </div>
-            </div>
+        <section class="overview">
+            <h1>Overview</h1>
         </section>
 
         <section class="footer">
