--- a/subsystems.html
+++ b/subsystems.html
@@ -28,13 +28,13 @@
                         <div class="dropdown">
                             <li><a href="subsystems.html">SUBSYSTEMS</a></li>
                             <div id="dropdown-options">
-                                <a href="">MECHANICAL</a>
-                                <a href="">ELECTRICAL</a>
-                                <a href="">SOFTWARE</a>
-                                <a href="">BUSINESS</a>
+                                <a href="mechanical.html">MECHANICAL</a>
+                                <a href="electrical.html">ELECTRICAL</a>
+                                <a href="software.html">SOFTWARE</a>
+                                <a href="business.html">BUSINESS</a>
                             </div>
                         </div>
-                        <li><a href="">SPONSORS</a></li>
+                        <li><a href="sponsor.html">SPONSORS</a></li>
                         <li><a href="contact.html">CONTACT</a></li>
                     </ul>
                 </div>
@@ -82,6 +82,10 @@
                 <div class="hook-blurb-col">
                     <h1>Mechanical</h1>
                     <div class="header-line"></div>
+                    <p>The mechanical team is responsible for building a rover frame capable of navigating desert-like terrain while being able
+                        to use dexterous arms that uses sensors and actuators to complete the competition tasks.
+                    </p>
+                    <a href="" class="hero-btn" id="hook-more-btn">LEARN MORE</a>
                 </div>
             </div>
             <div id="electrical-hook">
@@ -91,6 +95,7 @@
                 <div class="hook-blurb-col">
                     <h1>Electrical</h1>
                     <div class="header-line"></div>
+                    <a href="" class="hero-btn" id="hook-more-btn">LEARN MORE</a>
                 </div>
             </div>
             <div id="software-hook">
@@ -100,6 +105,7 @@
                 <div class="hook-blurb-col">
                     <h1>Software</h1>
                     <div class="header-line"></div>
+                    <a href="" class="hero-btn" id="hook-more-btn">LEARN MORE</a>
                 </div>
             </div>
             <div id="business-hook">
@@ -109,6 +115,7 @@
                 <div class="hook-blurb-col">
                     <h1>Business</h1>
                     <div class="header-line"></div>
+                    <a href="" class="hero-btn" id="hook-more-btn">LEARN MORE</a>
                 </div>
             </div>
         </section>
