--- a/sponsor.html
+++ b/sponsor.html
@@ -40,53 +40,11 @@
                 </div>
                 <i class="fa fa-bars" onclick="showMenu()"></i>
             </nav>
-
-            <h1>Our Team</h1>
+            <h1>Sponsors</h1>
         </section>
 
-        <section class="exec">
-            <div class="row">
-                <div class="exec-col">
-                    <img src="images/Exec/ProjLead.jfif">
-                    <h1>Clara Levy</h1>
-                    <h4>Project Manager</h4>
-                </div>
-                <div class="exec-col">
-                    <img src="images/Exec/ProjLead.jfif">
-                    <h1>Thomas Naish</h1>
-                    <h4>Vice-Project Manager</h4>
-                </div>
-                <div class="exec-col">
-                    <img src="images/Exec/ProjLead.jfif">
-                    <h1>Wyatt</h1>
-                    <h4>Electrical Lead</h4>
-                </div>
-                <div class="exec-col">
-                    <img src="images/Exec/ElecLead2.jfif">
-                    <h1>Sean McBride</h1>
-                    <h4>Electrical Lead</h4>
-                </div>
-            </div>
-        </section>
+        <section>
 
-        <section class="exec">
-            <div class="row">
-                <div class="exec-col">
-                    <img src="images/Exec/SoftLead.jfif">
-                    <h1>Abeer Muhammad</h1>
-                    <h4>Programming Lead</h4>
-                </div>
-                <div class="exec-col">
-                    <img src="images/Exec/SoftLead2.jfif">
-                    <h1>Dev Patel</h1>
-                    <h4>Programming Lead</h4>
-                </div>
-                <div class="exec-col">
-                    <img src="images/Exec/ProjLead.jfif">
-                    <h1>Nathan Eng</h1>
-                    <h4>Business Lead</h4>
-                </div>
-            </div>
         </section>
 
         <section class="footer">
