--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@
         <title>WeMars</title>
 
         <!--Google Fonts link-->
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@500&family=Poppins&display=swap" rel="stylesheet">
+        <link rel="preload" as="font" href="fonts/handjet.woff2" crossorigin>
+        <link rel="preload" as="font" href="fonts/poppins.woff2" crossorigin>
+
+
+        <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@500&family=Poppins" rel="stylesheet">
         <!--Links css file to html site-->
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="test.css">
         <!--Links bootstrapcdn-->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
