--- a/sponsor.html
+++ b/sponsor.html
@@ -23,19 +23,10 @@
                     <!--Close icon from Font Awesome icons-->
                     <i class="fa fa-times" onclick="hideMenu()"></i>
                     <ul>
-                        <li><a href="index.html">HOME</a></li>
-                        <li><a href="about.html">OUR TEAM</a></li>
-                        <div class="dropdown">
-                            <li><a href="subsystems.html">SUBSYSTEMS</a></li>
-                            <div id="dropdown-options">
-                                <a href="mechanical.html">MECHANICAL</a>
-                                <a href="electrical.html">ELECTRICAL</a>
-                                <a href="software.html">SOFTWARE</a>
-                                <a href="business.html">BUSINESS</a>
-                            </div>
-                        </div>
-                        <li><a href="sponsor.html">SPONSORS</a></li>
-                        <li><a href="contact.html">CONTACT</a></li>
+                        <li><a href="index.html"><span class="top"><span>Home</span></span><span class="bottom"><span>Home</span></span></a></li>
+                        <li><a href="about.html"><span class="top"><span>About</span></span><span class="bottom"><span>About</span></span></a></li>
+                        <li><a href="subsystems.html"><span class="top"><span>Subsystems</span></span><span class="bottom"><span>Subsystems</span></span></a></li>
+                        <li><a href="sponsor.html"><span class="top"><span>Sponsor</span></span><span class="bottom"><span>Sponsor</span></span></a></li>
                     </ul>
                 </div>
                 <i class="fa fa-bars" onclick="showMenu()"></i>
